--- a/ApplicationWithET.Module/ApplicationWithET.Module.csproj
+++ b/ApplicationWithET.Module/ApplicationWithET.Module.csproj
@@ -120,6 +120,7 @@
     <None Include="DatabaseUpdate\ReadMe.txt" />
     <None Include="FunctionalTests\MyTest.ets" />
     <None Include="Images\ReadMe.txt" />
+    <None Include="nuget.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
