--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
     command: 'restore'
     restoreSolution: '$(solution)'
     feedsToUse: 'config'
-    nugetConfigPath: '.\ApplicationWithET\ApplicationWithET.Module\NuGet.config'
+    nugetConfigPath: 'NuGet.config'
 
 - task: VSBuild@1
   inputs:
