--- a/ApplicationWithET.Module/app.config
+++ b/ApplicationWithET.Module/app.config
@@ -6,6 +6,22 @@
         <assemblyIdentity name="DevExpress.Data.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.ExpressApp.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.Printing.v19.2.Core" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.Xpo.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.ExpressApp.Xpo.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
