--- a/ApplicationWithET.Module.Win/ApplicationWithET.Module.Win.csproj
+++ b/ApplicationWithET.Module.Win/ApplicationWithET.Module.Win.csproj
@@ -152,6 +152,7 @@
     <EmbeddedResource Include="Images\ExpressAppLogo.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Controllers\ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
