--- a/ApplicationWithET.Module/packages.config
+++ b/ApplicationWithET.Module/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DevExpress.Data" version="19.2.5-pre-19350" targetFramework="net461" />
-  <package id="DevExpress.ExpressApp" version="19.2.5-pre-19350" targetFramework="net461" />
-  <package id="DevExpress.ExpressApp.Objects" version="19.2.5-pre-19350" targetFramework="net461" />
-  <package id="DevExpress.ExpressApp.ScriptRecorder" version="19.2.5-pre-19350" targetFramework="net461" />
-  <package id="DevExpress.ExpressApp.Xpo" version="19.2.5-pre-19350" targetFramework="net461" />
-  <package id="DevExpress.Images" version="19.2.5-pre-19350" targetFramework="net461" />
-  <package id="DevExpress.Pdf.Core" version="19.2.5-pre-19350" targetFramework="net461" />
-  <package id="DevExpress.Printing.Core" version="19.2.5-pre-19350" targetFramework="net461" />
-  <package id="DevExpress.Utils" version="19.2.5-pre-19350" targetFramework="net461" />
-  <package id="DevExpress.Xpo" version="19.2.5-pre-19350" targetFramework="net461" />
+  <package id="DevExpress.Data" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.ExpressApp" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.ExpressApp.Objects" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.ExpressApp.ScriptRecorder" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.ExpressApp.Xpo" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Images" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Pdf.Core" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Printing.Core" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Utils" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Xpo" version="19.2.5" targetFramework="net461" />
 </packages>
