--- a/ApplicationWithET.Win/App.config
+++ b/ApplicationWithET.Win/App.config
@@ -55,7 +55,47 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="DevExpress.Data.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-19.2.4.0" newVersion="19.2.4.0" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.RichEdit.v19.2.Core" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.Office.v19.2.Core" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.XtraReports.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.XtraScheduler.v19.2.Core" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.Sparkline.v19.2.Core" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.Printing.v19.2.Core" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.Xpo.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.ExpressApp.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.Utils.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.Persistent.Base.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
