--- a/ApplicationWithET.Module.Win/app.config
+++ b/ApplicationWithET.Module.Win/app.config
@@ -54,6 +54,14 @@
         <assemblyIdentity name="DevExpress.Persistent.Base.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.ExpressApp.Win.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.XtraBars.v19.2" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.2.5.0" newVersion="19.2.5.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
