--- a/ApplicationWithET.Module.Win/packages.config
+++ b/ApplicationWithET.Module.Win/packages.config
@@ -7,6 +7,7 @@
   <package id="DevExpress.DataAccess" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.ExpressApp" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.ExpressApp.Objects" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.ExpressApp.Win" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.ExpressApp.Xpo" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.Gauges.Core" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.Images" version="19.2.5" targetFramework="net461" />
@@ -22,5 +23,14 @@
   <package id="DevExpress.Scheduler.Core" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.Sparkline.Core" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.Utils" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Win" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Win.BonusSkins" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Win.Grid" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Win.Navigation" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Win.PivotGrid" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Win.Printing" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Win.RichEdit" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Win.TreeList" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.Win.VerticalGrid" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.Xpo" version="19.2.5" targetFramework="net461" />
 </packages>
