--- a/ApplicationWithET.Module.Win/packages.config
+++ b/ApplicationWithET.Module.Win/packages.config
@@ -7,6 +7,8 @@
   <package id="DevExpress.DataAccess" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.ExpressApp" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.ExpressApp.Objects" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.ExpressApp.ScriptRecorder" version="19.2.5" targetFramework="net461" />
+  <package id="DevExpress.ExpressApp.ScriptRecorder.Win" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.ExpressApp.Win" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.ExpressApp.Xpo" version="19.2.5" targetFramework="net461" />
   <package id="DevExpress.Gauges.Core" version="19.2.5" targetFramework="net461" />
