--- a/NuGet.config
+++ b/NuGet.config
@@ -1,8 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <clear />
     <add key="DXFeed" value="%DX_NUGET_PUB%" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="dxuniversal nuget" value="https://nuget.devexpress.com/XOvrCiTemTNuvFgAG659nPL3jwWSdff2jv1hlogrmghIiJ86yf/api" />
   </packageSources>
+  <disabledPackageSources>
+    <add key="TEMP Package source" value="true" />
+    <add key="23.09 nuget" value="true" />
+  </disabledPackageSources>
 </configuration>
